--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router": "^6.x.x",
+  "react-router-dom": "^6.x.x",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "reselect": "^5.1.1",
