--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.x.x",
-  "react-router-dom": "^6.x.x",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "reselect": "^5.1.1",
